# maze

./: .editorconfig  .gitignore  CLAUDE.md  README.md
.github/workflows/: DummyFileForTriggeringGitHubBuilds.cs  build-and-deploy-to-github-pages.yml  build-and-test-components-multi-os.yml  build-and-test-rust-components-multi-os.yml  build-and-test-rust-in-add_dummy_rust_library-branch-multi-os.yml  build-and-test-solver-rust-in-add_dummy_rust_library-branch-multi-os.yml  build-and-test-solver-rust-in-add_dummy_rust_library-branch.yml  build-solver-rust-in-add_dummy_rust_library-branch.yml  generate-png-from-puml.yml  learn-github-actions.yml  trigger-workflow-on-branch-only-for-rust-file.yml  trigger-workflow-on-branch-only.yml
diagrams/: maze.puml  maze2.puml
diagrams/includes/: test.puml
docs/: README.md  usage-guide.md
docs/diagrams/: README.md  architecture.puml  components.puml
research/algorithms/excel/: maze-algorithms.xlsx
src/csharp/: .editorconfig  Build-Non-Windows.sln  Build-Windows.sln  Build.sln  Directory.Build.props  README.md
src/csharp/Maze.Api/: Maze.Api.csproj  Maze.cs  MazeGame.cs  README.md  Solution.cs
src/csharp/Maze.Api.Tests/: Maze.ApI.Tests.csproj  Maze.Api.Tests.csproj  MazeAPITest.cs  MazeApiTest.cs  README.md  xunit.runner.json
src/csharp/Maze.Interop/: Maze.Interop.csproj  MazeCConnector.cs  MazeConnector.cs  MazeInterop.cs  MazeNativeConnector.cs  MazeWasmConnector.cs  MazeWasmConnectorBase.cs  MazeWasmInterop.cs  MazeWasmerConnector.cs  MazeWasmtimeConnector.cs  MazeWebAssemblyConnectorBase.cs  README.md
src/csharp/Maze.Interop.Tests/: Maze.Interop.Tests.csproj  MazeInteropTests.cs  MazeWasmInteropTests.cs  README.md  appsettings.json
src/csharp/Maze.Maui.App/: App.xaml  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  GameWebViewHandler.cs  MauiProgram.cs  Maze.Maui.App.csproj  README.md  publish-release-windows.bat
src/csharp/Maze.Maui.App.Tests/: Maze.Maui.App.Tests.csproj  README.md
src/csharp/Maze.Maui.Controls/: Maze.Maui.Controls.csproj  README.md
src/csharp/Maze.Maui.Services/: DeviceTypeService.cs  Maze.Maui.Services.csproj  README.md
src/csharp/Maze.Wasm.Interop/: Maze.Wasm.Interop.csproj  MazeCConnector.cs  (+7 more)
src/csharp/Maze.Wasm.Interop.Tests/: Maze.Wasm.Interop.Tests.csproj  MazeWasmInteropTests.cs  README.md  appsettings.json
src/docfx/: README.md  build_all.bat  build_all.sh  cleanup_tocs.ps1  copy_files.bat  copy_files.sh  docfx-non-windows.json  docfx.json  filter.yml  redocly.yaml  toc.yml  with_build.txt
src/graphics/: README.md
src/react/: README.md
src/rust/: Cargo.toml  README.md
src/rust/data_model/: Cargo.toml  README.md
src/rust/data_model/src/: error.rs  lib.rs  maze.rs  maze_cell_state.rs  maze_definition.rs  maze_point.rs  oauth_identity.rs  user.rs  user_email.rs  user_login.rs  user_login_token.rs  wrappers.rs
src/rust/maze/: Cargo.toml  README.md
src/rust/maze/benches/: bench_main.rs
src/rust/maze/benches/benchmarks/: maze.rs
src/rust/maze/src/: cell_state.rs  definition.rs  direction.rs  error.rs  game.rs  generation_algorithm.rs  generator.rs  lib.rs  line_printer.rs  maze.rs  maze_error.rs  maze_path.rs  maze_path_direction.rs  maze_point_offset.rs  maze_solution.rs  offset.rs  path.rs  point.rs  solution.rs  solver.rs  stdout_line_printer.rs  wall.rs
src/rust/maze_c/: Cargo.toml  README.md
src/rust/maze_c/src/: lib.rs
src/rust/maze_cli/: Cargo.toml
src/rust/maze_cli/src/: app.rs  console_app.rs  main.rs
src/rust/maze_cli/tests/: mock_app.rs  tests.rs
src/rust/maze_console/: Cargo.toml  README.md
src/rust/maze_console/src/: app.rs  console_app.rs  main.rs
src/rust/maze_console/tests/: mock_app.rs  tests.rs
src/rust/maze_game_bevy/: Cargo.toml  README.md
src/rust/maze_game_bevy/src/: lib.rs  main.rs
src/rust/maze_game_bevy_wasm/: Cargo.toml  README.md
src/rust/maze_game_bevy_wasm/src/: lib.rs
src/rust/maze_wasm/: Cargo.toml  LICENSE  README.md
src/rust/maze_wasm/src/: help_test.html  lib.rs  maze_wasm.html  wasm.rs  wasm_bindgen.rs  wasm_common.rs
src/rust/maze_wasm/tests/: help_examples_tests.mjs  package.json  run_test.mjs
src/rust/maze_wasm/tests/js/: api_tests.mjs  help_examples_tests.mjs  package.json  run_test.mjs
src/rust/maze_web_server/: Cargo.toml  README.md  cert.pem  config.example.mysql.toml  config.example.postgres-cloud.toml  config.example.postgres.toml  config.example.sqlite.toml  config.toml  key.pem
src/rust/maze_web_server/data/users/65a17317-51f1-4b03-9312-4fca95e78a6f/: user.json
src/rust/maze_web_server/data/users/65a17317-51f1-4b03-9312-4fca95e78a6f/mazes/: Maze_1.json  Maze_2.json  Maze_3.json
src/rust/maze_web_server/data/users/c7a54305-780c-44f6-819e-0e791f95e151/: user.json
src/rust/maze_web_server/data/users/f2d2373f-555c-4a45-aae1-efd69c101197/: user.json
src/rust/maze_web_server/data/users/f2d2373f-555c-4a45-aae1-efd69c101197/mazes/: Cheese.json  Chris Test 1.json
src/rust/maze_web_server/src/: lib.rs  main.rs
src/rust/maze_web_server/src/api/: mod.rs
src/rust/maze_web_server/src/api/v1/: handlers.rs  mod.rs  openapi.rs  routes.rs
src/rust/maze_web_server/src/api/v1/endpoints/: handlers.rs  mod.rs  tests.rs  user_emails.rs
src/rust/maze_web_server/src/config/: app.rs  mod.rs
src/rust/maze_web_server/src/middleware/: auth.rs  mod.rs
src/rust/maze_web_server/src/oauth/: account.rs  mod.rs  state.rs
src/rust/maze_web_server/src/oauth/internal/: facebook.rs  github.rs  google.rs  mod.rs
src/rust/maze_web_server/src/service/: auth.rs  mod.rs
src/rust/maze_web_server/src/utils/: logger.rs
src/rust/maze_web_server/tests/: test_v1.rs
src/rust/storage/: Cargo.toml  README.md
src/rust/storage/examples/: sql_store_smoke.rs  verify_migration.rs
src/rust/storage/migrations/: 0001_initial.sql  0002_user_emails.sql
src/rust/storage/src/: error.rs  file_store.rs  file_store_migration.rs  lib.rs  sql_store.rs  store.rs  store_error.rs  validation.rs
src/rust/storage/tests/: file_store_contract.rs  sql_store_contract.rs
src/rust/storage/tests/common/: mod.rs  store_contract.rs
(+302 files in other folders)
