[package]
name = "data_model"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "5.2" }
uuid = { version = "1.7", features = ["v4", "serde"], default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.7", features = ["v4", "serde", "js"], default-features = false }