[package]
name = "data_model"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "5.2" }
uuid = { version = "1.7", features = ["serde"], default-features = false }

[features]
default = ["uuid-random"]
uuid-disable-random = []
uuid-random = ["uuid/v4"]
wasm-bindgen = ["uuid/js", "uuid-disable-random"]
