[package]
name = "data_model"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false,features = ["serde", "alloc", "clock"] }
regex = { version = "1", default-features = false, features = ["std", "unicode-perl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "5.2", features = ["chrono"] }
uuid = { version = "1.7", features = ["serde"], default-features = false }

[dev-dependencies]
pretty_assertions = "1"
uuid = { version = "1.7", features = ["serde"], default-features = false }

[features]
default = ["uuid-random"]
wasm-lite = []
uuid-random = ["uuid/v4"]
wasm-bindgen = ["uuid/js", "wasm-lite"]
