[package]
name = "maze_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maze = { path = "../maze" }
crossterm = "*"

[dev-dependencies]
expectrl = "0.5"
log = "0.4"  
env_logger = "0.10"
strip-ansi-escapes = "0.1"