[package]
name = "maze_game_bevy_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
maze_game_bevy = { path = "../maze_game_bevy" }
bevy = { version = "0.18", default-features = false, features = ["webgl2"] }
wasm-bindgen = "0.2"
