[package]
name = "maze_wasm"
version = "0.1.0"
edition = "2021"
description = "maze_wasm web assembly package"
repository = "https://github.com/budgiedownunder/maze-project"
license = "MIT" 

[lib]
crate-type = ["cdylib"]

[dependencies]
data_model = { path = "../data_model" } 
maze = { path = "../maze" } 
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", optional = true, features = ["serde"] }

[features]
default = []
wasm-bindgen = ["dep:wasm-bindgen", "data_model/wasm-bindgen"]
uuid-disable-random = ["data_model/uuid-disable-random"]
