[package]
name = "maze_wasm"
version = "0.1.0"
edition = "2021"
description = "maze_wasm web assembly package"
repository = "https://github.com/budgiedownunder/maze-project"
license = "MIT" 

[lib]
crate-type = ["cdylib"]

[dependencies]
maze = { path = "../maze" } 
js-sys = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2", optional = true, features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
data_model = { path = "../data_model" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
data_model = { path = "../data_model", default-features = false, features = ["uuid-disable-random"] }

[features]
default = []
wasm-bindgen = ["dep:wasm-bindgen", "data_model/wasm-bindgen"]
uuid-disable-random = ["data_model/uuid-disable-random"]
