[package]
name = "maze_web_server"
version = "0.1.0"
edition = "2021"

[lib]
name = "maze_web_server"

[[bin]]
name = "maze_web_server"
path = "src/main.rs"

[dependencies]
actix-web = { version = "4", features = ["rustls-0_20"] }
argon2 = "0.5"
auth = { path = "../auth" }
config = "0.13"
data_model = { path = "../data_model" }
env_logger = "0.10"
lazy_static = "1.4"
log = "0.4"
maze = { path = "../maze" }
rustls = { version = "0.20"}
rustls-pemfile = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
storage = { path = "../storage" }
tokio = { version = "1.41", features = ["full"] }
tokio-macros = "=2.4.0"
urlencoding = "2.1"
utoipa = { version = "5.2" }
utoipa-rapidoc = { version = "5.0.0", features = ["actix-web"] }
utoipa-redoc = { version = "5.0.0", features = ["actix-web"] }
utoipa-swagger-ui = { version = "8.0.3", features = [ "actix-web"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
actix-http = "3.9"