[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
data_model = { path = "../data_model" }
log = "0.4"
maze = { path = "../maze" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "5.2" }
utils = { path = "../utils" }
unicase = "2.8"
uuid = { version = "1.7", features = ["v4", "serde"] } 

