[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
data_model = { path = "../data_model" }
log = "0.4"
maze = { path = "../maze" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["rt", "sync"] }
utoipa = { version = "5.2" }
utils = { path = "../utils" }
unicase = "2.8"
uuid = { version = "1.7", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1.41", features = ["rt", "rt-multi-thread", "macros"] }
tokio-test = "0.4"

